Reducing query latency by choosing first matched element and handling null cases