@@ -4,20 +4,19 @@ import com.example.Identity.Reconciliation.DTO.CustomerRequestDTO;
 import com.example.Identity.Reconciliation.DTO.CustomerResponseDTO;
 import com.example.Identity.Reconciliation.entity.CustomerEntity;
 import com.example.Identity.Reconciliation.repository.CustomerRepository;
-import lombok.extern.slf4j.Slf4j;
-import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.*;
-import java.util.logging.Logger;
 import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
+@Service
 public class CustomerService {
 
+    @Autowired
     private CustomerRepository repo;
 
     @Transactional
@@ -25,103 +24,90 @@ public class CustomerService {
 
         String email = customerRequestDTO.getEmail();
         String phoneNumber = customerRequestDTO.getPhoneNumber();
+        if(email == null &&  phoneNumber == null){
+            return ResponseEntity
+                    .status(HttpStatus.BAD_REQUEST)
+                    .build();
+        }
+        Optional<CustomerEntity> emailMatch = email != null ?repo.findFirstByEmail(email): Optional.empty()  ;
+        Optional<CustomerEntity> phoneMatch = phoneNumber != null ? repo.findFirstByPhoneNumber(phoneNumber) : Optional.empty() ;
 
-        List<CustomerEntity> emailMatches = email == null ? Collections.emptyList() : repo.findByEmail(email);
-        List<CustomerEntity> phoneMatches = phoneNumber == null ? Collections.emptyList() : repo.findByPhoneNumber(phoneNumber);
-
+        System.out.println(emailMatch);
+        System.out.println(phoneMatch);
         // --- CASE 1: New unique identity (no match for email/phone)
-        if (emailMatches.isEmpty() && phoneMatches.isEmpty()) {
-            CustomerEntity newPrimary = new CustomerEntity();
-            newPrimary.setEmail(email);
-            newPrimary.setPhoneNumber(phoneNumber);
-            newPrimary.setLinkedPreference("primary");
-            // createdAt, updatedAt handled by @PrePersist
-            repo.save(newPrimary);
-            return ResponseEntity.ok(formatResponse(newPrimary, List.of()));
+        if (emailMatch.isEmpty() && phoneMatch.isEmpty()) {
+            CustomerEntity primaryCustomerRecord = new CustomerEntity();
+            primaryCustomerRecord.setEmail(email);
+            primaryCustomerRecord.setPhoneNumber(phoneNumber);
+            primaryCustomerRecord.setLinkedPreference("primary");
+            repo.save(primaryCustomerRecord);
+            return ResponseEntity.status(HttpStatus.CREATED).body(formatResponse(primaryCustomerRecord, Collections.emptyList()));
         }
 
         // Find all the roots for the email and phone matches (if any)
-        CustomerEntity rootPrimary = null;
-        if (!emailMatches.isEmpty() && !phoneMatches.isEmpty()) {
+        CustomerEntity primaryEntity = null;
+        if (emailMatch.isPresent() && phoneMatch.isPresent()) {
             // Could be different clusters, resolve each to root, for potential merge
-            CustomerEntity rootA = findRoot(emailMatches.get(0));
-            CustomerEntity rootB = findRoot(phoneMatches.get(0));
+            CustomerEntity primaryCustomerFromEmail = findPrimaryCustomer(emailMatch.get());
+            CustomerEntity primaryCustomerFromPhone = findPrimaryCustomer(phoneMatch.get());
 
-            if (!rootA.getId().equals(rootB.getId())) {
+            if (!primaryCustomerFromEmail.getId().equals(primaryCustomerFromPhone.getId())) {
                 // Merge two trees, oldest as primary
-                CustomerEntity winner = rootA.getCreatedAt().isBefore(rootB.getCreatedAt()) ? rootA : rootB;
-                CustomerEntity loser = winner == rootA ? rootB : rootA;
-                demoteTreeToSecondary(loser, winner.getId());
-                rootPrimary = winner;
+                CustomerEntity olderCustomerEntity = primaryCustomerFromEmail.getCreatedAt().isBefore(primaryCustomerFromPhone.getCreatedAt()) ? primaryCustomerFromEmail : primaryCustomerFromPhone;
+                CustomerEntity recentCustomerEntity = olderCustomerEntity == primaryCustomerFromEmail ? primaryCustomerFromPhone : primaryCustomerFromEmail;
+                demoteTreeToSecondary(recentCustomerEntity, olderCustomerEntity.getId());
+                primaryEntity = olderCustomerEntity;
             } else {
-                rootPrimary = rootA;
+                primaryEntity = primaryCustomerFromEmail;
             }
         } else {
             // Only one side matches, climb up to the root
-            rootPrimary = !emailMatches.isEmpty() ? findRoot(emailMatches.get(0)) : findRoot(phoneMatches.get(0));
+            primaryEntity = emailMatch.isPresent() ? findPrimaryCustomer(emailMatch.get()) : findPrimaryCustomer(phoneMatch.get());
         }
 
         // Check if exact match exists (`both fields match the same customer`)
-        boolean alreadyExists = Stream.concat(emailMatches.stream(), phoneMatches.stream())
-                .anyMatch(e -> Objects.equals(e.getEmail(), email) && Objects.equals(e.getPhoneNumber(), phoneNumber));
+        Optional<CustomerEntity> existedCustomerEntity= repo.findFirstByPhoneNumberAndEmail(phoneNumber,email);
 
-        // --- CASE 3: Both fields match same customer, no creation, just return
-        if (alreadyExists) {
-            List<CustomerEntity> allCluster = collectAllLinked(rootPrimary);
-            return ResponseEntity.ok(formatResponse(rootPrimary, allCluster));
+        if (existedCustomerEntity.isPresent()) {
+            List<CustomerEntity> allCluster = collectAllSecondaryCustomers(primaryEntity);
+            return ResponseEntity.status(HttpStatus.OK).body(formatResponse(primaryEntity, allCluster));
         }
 
         // --- CASE 2: Only one field matches (partial match), add as secondary
-        if ((emailMatches.isEmpty() && !phoneMatches.isEmpty()) || (!emailMatches.isEmpty() && phoneMatches.isEmpty())) {
-            CustomerEntity newSec = new CustomerEntity();
-            newSec.setEmail(email);
-            newSec.setPhoneNumber(phoneNumber);
-            newSec.setLinkedPreference("secondary");
-            newSec.setLinkedId(rootPrimary.getId());
-            repo.save(newSec);
+        if (emailMatch.isEmpty()  ||  phoneMatch.isEmpty()) {
+            if((email != null && phoneNumber != null) || (email == null && phoneMatch.isEmpty()) || (phoneNumber==null && emailMatch.isEmpty())){
+                CustomerEntity secondaryEntity = new CustomerEntity();
+                secondaryEntity.setEmail(email);
+                secondaryEntity.setPhoneNumber(phoneNumber);
+                secondaryEntity.setLinkedPreference("secondary");
+                secondaryEntity.setLinkedId(primaryEntity.getId());
+                repo.save(secondaryEntity);
+            }
 
-            List<CustomerEntity> allCluster = collectAllLinked(rootPrimary);
-            return ResponseEntity.ok(formatResponse(rootPrimary, allCluster));
+            List<CustomerEntity> secondaryCustomers = collectAllSecondaryCustomers(primaryEntity);
+            return ResponseEntity.status(HttpStatus.CREATED).body(formatResponse(primaryEntity, secondaryCustomers));
         }
 
         // --- CASE 4: Both fields match but different clusters, handled above (merge)... now just return merged cluster
-        List<CustomerEntity> allCluster = collectAllLinked(rootPrimary);
-        return ResponseEntity.ok(formatResponse(rootPrimary, allCluster));
+        List<CustomerEntity> allCluster = collectAllSecondaryCustomers(primaryEntity);
+        return ResponseEntity.ok(formatResponse(primaryEntity, allCluster));
     }
 
-    // Upward traversal to the root primary customer
-    private CustomerEntity findRoot(CustomerEntity customer) {
-        while (customer.getLinkedId() != null) {
-            Optional<CustomerEntity> parent = repo.findById(customer.getLinkedId());
-            if (parent.isEmpty()) break;
-            customer = parent.get();
-        }
-        return customer;
+    private CustomerEntity findPrimaryCustomer(CustomerEntity customer) {
+        return customer.getLinkedId() != null ? repo.findById(customer.getLinkedId()).orElse(customer) : customer;
     }
 
     // Downward traversal: get all customers in this cluster (BFS)
-    private List<CustomerEntity> collectAllLinked(CustomerEntity root) {
+    private List<CustomerEntity> collectAllSecondaryCustomers(CustomerEntity root) {
         List<CustomerEntity> result = new ArrayList<>();
-        Queue<CustomerEntity> queue = new LinkedList<>();
         result.add(root);
-        queue.add(root);
-
-        while (!queue.isEmpty()) {
-            CustomerEntity curr = queue.poll();
-            List<CustomerEntity> children = repo.findByLinkedId(curr.getId());
-            for (CustomerEntity child : children) {
-                if (!result.contains(child)) {
-                    result.add(child);
-                    queue.add(child);
-                }
-            }
-        }
+        result.addAll(repo.findByLinkedId(root.getId()));
         return result;
     }
 
     // Demote a customer tree (and all its descendants) to secondary, point to new root
-    private void demoteTreeToSecondary(CustomerEntity loser, Long newRootId) {
-        List<CustomerEntity> toUpdate = collectAllLinked(loser);
+    private void demoteTreeToSecondary(CustomerEntity recentCustomerEntity, Long newRootId) {
+        List<CustomerEntity> toUpdate = collectAllSecondaryCustomers(recentCustomerEntity);
         for (CustomerEntity c : toUpdate) {
             if ("primary".equals(c.getLinkedPreference())) {
                 c.setLinkedPreference("secondary");
@@ -136,32 +122,32 @@ public class CustomerService {
 
     // Compose API response per your DTO spec, always put primary's email/phone first in lists
     private CustomerResponseDTO formatResponse(CustomerEntity primary, List<CustomerEntity> cluster) {
-        List<String> emails = cluster.stream()
-                .map(CustomerEntity::getEmail)
-                .filter(Objects::nonNull)
-                .distinct()
-                .collect(Collectors.toList());
+        List<String> emails = new ArrayList<>();
+        List<String> phones = new ArrayList<>();
 
-        List<String> phones = cluster.stream()
-                .map(CustomerEntity::getPhoneNumber)
-                .filter(Objects::nonNull)
-                .distinct()
-                .collect(Collectors.toList());
+        if (!cluster.isEmpty()) {
+            emails = cluster.stream().map(CustomerEntity::getEmail).filter(Objects::nonNull).distinct().collect(Collectors.toList());
+            phones = cluster.stream().map(CustomerEntity::getPhoneNumber).filter(Objects::nonNull).distinct().collect(Collectors.toList());
+        }
 
+
+        System.out.println(emails + "emails ");
+        System.out.println(phones + "emails ");
         // Ensure primary's email/phone are first in respective lists
-        if (primary.getEmail() != null && emails.contains(primary.getEmail())) {
+        if (!emails.isEmpty() && primary.getEmail() != null && emails.contains(primary.getEmail())) {
             emails.remove(primary.getEmail());
             emails.add(0, primary.getEmail());
         }
-        if (primary.getPhoneNumber() != null && phones.contains(primary.getPhoneNumber())) {
+        if (!phones.isEmpty() && primary.getPhoneNumber() != null && phones.contains(primary.getPhoneNumber())) {
             phones.remove(primary.getPhoneNumber());
             phones.add(0, primary.getPhoneNumber());
         }
 
-        List<Long> secondaryIds = cluster.stream()
-                .filter(c -> "secondary".equals(c.getLinkedPreference()))
-                .map(CustomerEntity::getId)
-                .collect(Collectors.toList());
+
+        List<Long> secondaryIds = new ArrayList<>();
+        if (!cluster.isEmpty()) {
+            secondaryIds = cluster.stream().filter(c -> "secondary".equals(c.getLinkedPreference())).map(CustomerEntity::getId).collect(Collectors.toList());
+        }
 
         CustomerResponseDTO.Contact contactDTO = new CustomerResponseDTO.Contact(
                 primary.getId(),
